--- a/EventFlowSample/WebApp/WebApp.csproj
+++ b/EventFlowSample/WebApp/WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -8,6 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EventFlow" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.AspNetCore" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.Autofac" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.DependencyInjection" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.Elasticsearch" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.EventStores.EventStore" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.Hangfire" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.MsSql" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.PostgreSql" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.RabbitMQ" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.Sql" Version="0.74.3948" />
+    <PackageReference Include="EventFlow.TestHelpers" Version="0.74.3948" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.12" />
