--- a/EventFlowSample/WebApp/Dockerfile
+++ b/EventFlowSample/WebApp/Dockerfile
@@ -9,12 +9,12 @@ COPY ["WebApp/WebApp.csproj", "WebApp/"]
 RUN dotnet restore "WebApp/WebApp.csproj"
 COPY . .
 WORKDIR "/src/WebApp"
-RUN dotnet build "WebApp.csproj" -c Release -o /app
+RUN dotnet build "WebApp.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "WebApp.csproj" -c Release -o /app
+RUN dotnet publish "WebApp.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app .
+COPY --from=publish /app/publish
 ENTRYPOINT ["dotnet", "WebApp.dll"]
