--- a/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
+++ b/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
@@ -8,6 +8,19 @@
 
   <ItemGroup>
     <PackageReference Include="EventFlow" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.Autofac" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.DependencyInjection" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.Elasticsearch" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.EntityFramework" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.EventStores.EventStore" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.Hangfire" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.MongoDB" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.MsSql" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.Owin" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.PostgreSql" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.RabbitMQ" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.Sql" Version="0.75.3970" />
+    <PackageReference Include="EventFlow.SQLite" Version="0.75.3970" />
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
