--- a/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
+++ b/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EventFlow" Version="0.75.3970" />
     <PackageReference Include="EventFlow.Autofac" Version="0.75.3970" />
     <PackageReference Include="EventFlow.DependencyInjection" Version="0.75.3970" />
     <PackageReference Include="EventFlow.Elasticsearch" Version="0.75.3970" />
@@ -16,7 +15,6 @@
     <PackageReference Include="EventFlow.Hangfire" Version="0.75.3970" />
     <PackageReference Include="EventFlow.MongoDB" Version="0.75.3970" />
     <PackageReference Include="EventFlow.MsSql" Version="0.75.3970" />
-    <PackageReference Include="EventFlow.Owin" Version="0.75.3970" />
     <PackageReference Include="EventFlow.PostgreSql" Version="0.75.3970" />
     <PackageReference Include="EventFlow.RabbitMQ" Version="0.75.3970" />
     <PackageReference Include="EventFlow.Sql" Version="0.75.3970" />
@@ -25,6 +23,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+    <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
