--- a/EventFlowSample/DomainModel/DomainModel.csproj
+++ b/EventFlowSample/DomainModel/DomainModel.csproj
@@ -1,12 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <UserSecretsId>cf8e1cc5-a2fb-4788-b878-837478bb0163</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <PublishReadyToRun>true</PublishReadyToRun>
-    <PublishTrimmed>true</PublishTrimmed>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,15 +10,13 @@
     <PackageReference Include="EventFlow.Autofac" Version="0.76.4014" />
     <PackageReference Include="EventFlow.DependencyInjection" Version="0.76.4014" />
     <PackageReference Include="EventFlow.Elasticsearch" Version="0.76.4014" />
+    <PackageReference Include="EventFlow.EntityFramework" Version="0.76.4014" />
     <PackageReference Include="EventFlow.EventStores.EventStore" Version="0.76.4014" />
     <PackageReference Include="EventFlow.Hangfire" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.MsSql" Version="0.76.4014" />
+    <PackageReference Include="EventFlow.MongoDB" Version="0.76.4014" />
     <PackageReference Include="EventFlow.PostgreSql" Version="0.76.4014" />
     <PackageReference Include="EventFlow.RabbitMQ" Version="0.76.4014" />
     <PackageReference Include="EventFlow.Sql" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.TestHelpers" Version="0.76.4014" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
   </ItemGroup>
 
 </Project>
