--- a/EventFlowSample/WebApp/WebApp.csproj
+++ b/EventFlowSample/WebApp/WebApp.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="EventFlow" Version="0.76.4014" />
     <PackageReference Include="EventFlow.AspNetCore" Version="0.76.4014" />
     <PackageReference Include="EventFlow.Autofac" Version="0.76.4014" />
@@ -24,6 +25,10 @@
     <PackageReference Include="EventFlow.TestHelpers" Version="0.76.4014" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DomainModel\DomainModel.csproj" />
   </ItemGroup>
 
 </Project>
