--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@
 language: csharp
 mono: none
 dotnet: 3.0
+solution: ./EventFlowSample/EventFlowSample.sln
 script:
     - dotnet restore
     - dotnet build
-    - dotnet test EventFlowSample\GettingStartedTest\GettingStartedTest.csproj
+    - dotnet test
