--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: csharp
 mono: none
 dotnet: 3.0
 solution: ./EventFlowSample/EventFlowSample.sln
-script:
+before_script:
     - dotnet restore
     - dotnet build
+script:    
     - dotnet test
