--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
 language: csharp
 mono: none
 dotnet: 3.0
+services:
+  - postgresql
+  - rabbitmq
 before_script:
     - dotnet restore ./EventFlowSample/EventFlowSample.sln
     - dotnet build ./EventFlowSample/EventFlowSample.sln
