--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
-
+dist: xenial
 language: csharp
 mono: none
 dotnet: 3.0
 services:
-  - rabbitmq
   - postgresql
+addons:
+  apt:
+    packages:
+    - rabbitmq-server
 before_script:
     - dotnet restore ./EventFlowSample/EventFlowSample.sln
     - dotnet build ./EventFlowSample/EventFlowSample.sln
