--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -7,6 +7,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      rabbitmq:
+        image: rabbitmq:latest
+        
     steps:
     - uses: actions/checkout@v1
     - name: Setup .NET Core
