--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,5 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.0.101
-    - name: Run Tests with dotnet
+    - name: Run build with dotnet
       run: dotnet build /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/EventFlowSample.sln --configuration Release
+    
+    - name: Run build with dotnet
+      run: dotnet test /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
