--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -10,6 +10,8 @@ jobs:
     services:
       rabbitmq:
         image: rabbitmq:latest
+        ports:
+        - 5672/tcp
         
     steps:
     - uses: actions/checkout@v1
