--- a/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
+++ b/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
@@ -7,23 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EventFlow.Autofac" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.DependencyInjection" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.Elasticsearch" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.EntityFramework" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.EventStores.EventStore" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.Hangfire" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.MongoDB" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.MsSql" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.PostgreSql" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.RabbitMQ" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.Sql" Version="0.76.4014" />
-    <PackageReference Include="EventFlow.SQLite" Version="0.76.4014" />
-    <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="EventFlow.Autofac" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.DependencyInjection" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.Elasticsearch" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.EntityFramework" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.EventStores.EventStore" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.Hangfire" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.MongoDB" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.MsSql" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.PostgreSql" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.RabbitMQ" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.Sql" Version="0.77.4077" />
+    <PackageReference Include="EventFlow.SQLite" Version="0.77.4077" />
+    <PackageReference Include="FluentAssertions" Version="5.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="System.Text.Json" Version="4.6.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
