--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Run build with dotnet
       run: dotnet build -c Release /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/EventFlowSample.sln
     - name: Setup database
-      run: psql -h localhost -U postgres -c 'CREATE DATABASE "event_flow_sample";'
+      run: psql -h localhost -U postgres -W postgres -c 'CREATE DATABASE "event_flow_sample";'
     - name: Run tests
       run: dotnet test -c Release --verbosity normal /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/GettingStartedTest/GettingStartedTest.csproj
       env:
