--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -44,6 +44,10 @@ jobs:
       run: dotnet --version
     - name: Run build with dotnet
       run: dotnet build -c Release /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/EventFlowSample.sln
+    - name: Install PostgreSQL client
+      run: |
+          apt-get update
+          apt-get install --yes postgresql-client
     - name: Setup database
       run: psql -h localhost -U postgres -W postgres -c 'CREATE DATABASE "event_flow_sample";'
     - name: Run tests
