--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -29,6 +29,10 @@ jobs:
         
     steps:
     - uses: actions/checkout@v4
+    - uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+          packages: postgresql-client
+          version: 1.0
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
@@ -44,10 +48,6 @@ jobs:
       run: dotnet --version
     - name: Run build with dotnet
       run: dotnet build -c Release /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/EventFlowSample.sln
-    - name: Install PostgreSQL client
-      run: |
-          apt-get update
-          apt-get install --yes postgresql-client
     - name: Setup database
       run: psql -h localhost -U postgres -W postgres -c 'CREATE DATABASE "event_flow_sample";'
     - name: Run tests
