--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -28,15 +28,15 @@ jobs:
           - 5432:5432
         
     steps:
-    - uses: actions/checkout@v4
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
           packages: postgresql-client
           version: 1.0
     - name: Setup database
-      env:
-        POSTGRES_PASSWORD: postgres
       run: psql -h localhost -U postgres -W postgres -c 'CREATE DATABASE "event_flow_sample";'
+      env:
+        PGPASSWORD: postgres
+    - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
