--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -33,7 +33,7 @@ jobs:
           packages: postgresql-client
           version: 1.0
     - name: Setup database
-      run: psql -h localhost -U postgres -W postgres -c 'CREATE DATABASE "event_flow_sample";'
+      run: psql -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'event_flow_sample'" | grep -q 1 || psql -h localhost -U postgres -c 'CREATE DATABASE "event_flow_sample";'
       env:
         PGPASSWORD: postgres
     - uses: actions/checkout@v4
