--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,13 +19,15 @@ steps:
     version: '6.x'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Install .NET SDK'
+  displayName: 'Restore'
   inputs:
     command: 'restore'
     projects: '**/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
     
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build $(buildConfiguration)'
   inputs:
     command: 'build'
     projects: '**/*.csproj'
+    arguments: '--configuration $(buildConfiguration) --no-restore'
