--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,13 +17,6 @@ steps:
   displayName: 'Install .NET SDK'
   inputs:
     version: '6.x'
-
-- task: DotNetCoreCLI@2
-  displayName: 'Restore'
-  inputs:
-    command: 'restore'
-    projects: '**/*.csproj'
-    arguments: '--configuration $(buildConfiguration)'
     
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build $(buildConfiguration)'
@@ -33,6 +26,7 @@ steps:
     arguments: '--configuration $(buildConfiguration) --no-restore'
 
 - task: DotNetCoreCLI@2
+  displayName: 'dotnet test $(buildConfiguration)'
   inputs:
     command: 'test'
     projects: '**/*Tests/*.csproj'
