--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,5 +29,5 @@ steps:
   displayName: 'dotnet test $(buildConfiguration)'
   inputs:
     command: 'test'
-    projects: '**/*Tests/*.csproj'
+    projects: '**/*Test.csproj'
     arguments: '--configuration $(buildConfiguration)'
