--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -40,10 +40,11 @@ jobs:
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
         restore-keys: |
           ${{ runner.os }}-nuget
-    - name: Show dotnet version
-      run: dotnet --version
+
+    - name: Install dependencies
+      run: dotnet restore
       
-    - name: Run build with dotnet
+    - name: Build
       run: dotnet build -c Release /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/EventFlowSample.sln
       
     - uses: awalsh128/cache-apt-pkgs-action@latest
@@ -64,10 +65,11 @@ jobs:
           POSTGRES_HOST: localhost
           # The default PostgreSQL port
           POSTGRES_PORT: 5432
+          
     - name: Test Report
       uses: dorny/test-reporter@v1
       if: success() || failure()    # run this step even if previous step failed
       with:
-        name: JEST Tests            # Name of the check run which will be created
-        path: reports/test-results.trx    # Path to test results
+        name: Tests            # Name of the check run which will be created
+        path: /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/GettingStartedTest/TestResults/test-results.trx    # Path to test results
         reporter: dotnet-trx        # Format of test results
