--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -42,7 +42,7 @@ jobs:
           ${{ runner.os }}-nuget
 
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/EventFlowSample.sln
       
     - name: Build
       run: dotnet build -c Release /home/runner/work/EventFlowSample/EventFlowSample/EventFlowSample/EventFlowSample.sln
