--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -114,6 +114,6 @@ jobs:
         github.event_name != 'workflow_run' && github.ref == 'refs/heads/master'
       uses: andymckay/append-gist-action@1fbfbbce708a39bd45846f0955ed5521f2099c6d
       with:
-        token: ${{ secrets.GIST_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         gistURL: https://gist.github.com/SergerGood/bd336997719393c164517a9a5ca07431
         file: badge.svg
